Fix several warnings about unused variables, imports and deprecated methods.